deployPolice/argo-bluegreen/bluegreen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo
spec:
  ingressClassName: nginx
  rules:
    - host: bluegreen.starmooc.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluegreen-demo
                port:
                  name: http
